k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: balance-backend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
